# Coding-DNA

./: .gitignore  Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_simulation.py  verify_env.py
.qwen/: settings.json
WildfireContainment-v0-FIXED/wildfire_project/: Dockerfile  models.py  openenv.yaml
WildfireContainment-v0-FIXED/wildfire_project/agents/: baseline.py
WildfireContainment-v0-FIXED/wildfire_project/env/: wildfire_env.py
WildfireContainment-v0-FIXED/wildfire_project/frontend/: app.js  style.css
WildfireContainment-v0-FIXED/wildfire_project/server/: app.py
_zip_compare/Coding-DNA-fixed/: .gitignore  Dockerfile  README.md  models.py  openenv.yaml
_zip_compare/Coding-DNA-fixed/agents/: baseline.py
_zip_compare/Coding-DNA-fixed/frontend/: index.html  style.css
_zip_compare/Coding-DNA-fixed/server/: app.py
_zip_compare/Coding-DNA-fixed/tasks/: __init__.py  definitions.py  graders.py
agents/: baseline.py
env/: config.py  state.py  utils.py  wildfire_env.py
frontend/: app.js  index.html  style.css
server/: app.py
tasks/: definitions.py  graders.py
