[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfire-containment-env"
version = "0.1.0"
description = "Wildfire Containment OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "openenv-core>=0.2.3",
    "pytest>=7.4.0",
    "python-multipart",
    "jinja2",
    "websockets"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "agents*", "render*", "server*", "models.py"]
